--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -15,9 +15,29 @@ jobs:
       - name: "Cleanup disk space"
         run: |
           df -h
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
           sudo docker image prune --all --force
-          sudo docker builder prune -a
+
+          sudo swapoff -a
+          sudo rm -f /mnt/swapfile
+
+          sudo apt-get remove -y '^aspnetcore-.*'
+          sudo apt-get remove -y '^dotnet-.*'
+          sudo apt-get remove -y '^llvm-.*'
+          sudo apt-get remove -y 'php.*'
+          sudo apt-get remove -y '^mongodb-.*'
+          sudo apt-get remove -y '^mysql-.*'
+
+          sudo apt-get remove -y google-chrome-stable microsoft-edge-stable
+          sudo apt-get remove -y google-cloud-cli --fix-missing
+          sudo apt-get remove -y powershell --fix-missing
+
+          sudo apt-get remove -y azure-cli firefox mono-devel libgl1-mesa-dri --fix-missing
+          sudo apt-get autoremove -y
+          sudo apt-get clean
           df -h
       
       - name: Install Nix & Podman
