--- a/scripts/config/boot-entry.conf
+++ b/scripts/config/boot-entry.conf
@@ -1,3 +1,3 @@
 title Arch Linux (default)
 efi /EFI/Arch/arch-linux.efi
-options root=/dev/mapper/root cryptdevice=LABEL=ARCH_ROOT:root rootflags=subvol=@root rw lsm=landlock,lockdown,yama,integrity,apparmor,bpf nvidia-drm.modeset=1 nvidia-drm.fbdev=1
+options root=/dev/mapper/root rootflags=subvol=@root rw lsm=landlock,lockdown,yama,integrity,apparmor,bpf nvidia-drm.modeset=1 nvidia-drm.fbdev=1
