--- a/system/src/entry.conf
+++ b/system/src/entry.conf
@@ -1,3 +1,3 @@
 title {{title}}
 efi {{efi_path}}
-options root=/dev/mapper/root cryptdevice=LABEL={{root_label}}:root rootflags={{root_options}} rw lsm=landlock,lockdown,yama,integrity,apparmor,bpf nvidia-drm.modeset=1 nvidia-drm.fbdev=1
+options root=/dev/mapper/root rootflags={{root_options}} rw lsm=landlock,lockdown,yama,integrity,apparmor,bpf nvidia-drm.modeset=1 nvidia-drm.fbdev=1
