--- a/scripts/config/nftables.conf
+++ b/scripts/config/nftables.conf
@@ -6,40 +6,43 @@ flush ruleset
 
 # a common table for both IPv4 and IPv6
 table inet filter {
-
-	# protocols to allow
-	set allowed_protocols {
-		type inet_proto
-		elements = { icmp, icmpv6 }
-	}
-
-	# interfaces to accept any traffic on
-	set allowed_interfaces {
+	set trusted_interfaces {
 		type ifname
-		elements = { "lo" }
+		elements = { "lo", "lxdbr0" }
 	}
 
-	# services to allow
-	set allowed_tcp_dports {
-		type inet_service
-		elements = { ssh }
+	chain input {
+		# Drop by default
+		type filter hook input priority filter; policy drop;
+
+		ct state invalid drop comment "Drop invalid connections"
+
+		iifname @trusted_interfaces accept comment "Accept any traffic from trusted interfaces"
+		fib daddr . iif type != { local, broadcast, multicast } drop comment "Drop packets if the destination IP address is not configured on the incoming interface (strong host model)"
+		ct state { established, related } accept comment "Accept traffic originated from us"
+
+		meta l4proto { icmp, ipv6-icmp } accept comment "Accept ICMP"
+		ip protocol igmp accept comment "Accept IGMP"
+
+		udp dport mdns ip6 daddr ff02::fb accept comment "Accept mDNS"
+		udp dport mdns ip daddr 224.0.0.251 accept comment "Accept mDNS"
+
+		# Allow specific ports
+		# tcp dport { 8080 } accept comment "Open particular ports"
+
+		counter comment "Count denied packets that did not match any rule"
 	}
 
-	# this chain gathers all accept conditions
-	chain allow {
-		ct state established,related accept
+	chain forward {
+		# Drop everything forwarded to us unless it is from a trusted interface
+		type filter hook forward priority filter; policy drop;
 
-		meta l4proto @allowed_protocols accept
-		iifname @allowed_interfaces accept
-		# tcp dport @allowed_tcp_dports accept
+		iifname @trusted_interfaces accept comment "Accept traffic from trusted interfaces"
 	}
 
-	# base-chain for traffic to this host
-	chain INPUT {
-		type filter hook input priority filter + 20
-		policy accept
-
-		jump allow
-		reject with icmpx type port-unreachable
+	chain output {
+		# Accept every outbound connection
+		type filter hook output priority filter; policy accept;
 	}
+
 }
